# ClarityAI

./: .replit  README.md  main.py  next.config.js  package.json  pyproject.toml  requirements.txt  script.js  test_env.py
.next/server/: server-reference-manifest.js  server-reference-manifest.json
attached_assets/: Pasted-Hello-Please-help-me-overhaul-the-UI-for-my-ClarityAI-project-I-want-you-to-generate-the-new-sty-1753085160359_1753085160365.txt  Pasted-document-addEventListener-DOMContentLoaded-const-clarifyButton-document-getElement-1753085428447_1753085428449.txt
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/clarify/: route.ts
static/: script.js  style.css
templates/: index.html
