[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "flask>=3.1.1",
    "google-generativeai>=0.8.5",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "requests>=2.32.4",
]
